--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   
   <!-- Integración de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
@@ -31,9 +31,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text-primary" href="index.html">MasterTic's</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link active text-primary" aria-current="page" href="#inicio">Inicio</a>
           </li>
@@ -53,7 +50,7 @@
         <!-- Interruptor de modo claro y oscuro -->
         <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="modoOscuroSwitch">
-          <label class="form-check-label text-primary" for="modoOscuroSwitch">Modo Oscuro</label>
+          <label class="form-check-label text-white" for="modoOscuroSwitch">Modo Oscuro</label>
         </div>
       </div>
     </div>
@@ -86,16 +83,36 @@
     </button>
   </div>
   
-  <!-- Contenido de la página -->
-  <div id="productos" class="container-fluid seccion">
-    <h2>Productos</h2>
-    <!-- Contenido de la sección "Productos" -->
+  <div id="productos" class="container-fluid seccion seccion-productos">
+    <h2 class="mb-4 titulo">Productos</h2>
+    <div class="container productos-grid mt-4">
+      <!-- Aquí puedes colocar tus productos -->
+      <div class="producto">Producto 1</div>
+      <div class="producto">Producto 2</div>
+      <div class="producto">Producto 3</div>
+      <div class="producto">Producto 4</div>
+      <div class="producto">Producto 5</div>
+      <div class="producto">Producto 6</div>
+      <div class="producto">Producto 7</div>
+      <div class="producto">Producto 8</div>
+    </div>
   </div>
   
-  <div id="servicios" class="container-fluid seccion">
-    <h2>Servicios</h2>
-    <!-- Contenido de la sección "Servicios" -->
+  <div id="servicios" class="container-fluid seccion seccion-servicios">
+    <h2 class="mb-4 titulo">Servicios</h2>
+    <div class="container servicios-grid mt-4">
+      <!-- Aquí puedes colocar tus servicios -->
+      <div class="servicio">Servicio 1</div>
+      <div class="servicio">Servicio 2</div>
+      <div class="servicio">Servicio 3</div>
+      <div class="servicio">Servicio 4</div>
+      <div class="servicio">Servicio 1</div>
+      <div class="servicio">Servicio 2</div>
+      <div class="servicio">Servicio 3</div>
+      <div class="servicio">Servicio 4</div>
+    </div>
   </div>
+
   <!-- Contenido de la página -->
   <div id="nosotros" class="container-fluid seccion">
     <h2>Nosotros</h2>
@@ -133,6 +150,7 @@
       <p>&copy; 2024 MasterTic's. Todos los derechos reservados.</p>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
