--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MasterTic's</title>
-  <!-- Agrega la etiqueta link para el favicon -->
   <link rel="icon" type="image/png" href="logo/favicon.ico">
-  <!-- Fin de la adición del favicon -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="estilos.css"> 
+ 
 </head>
 <body>
   <div class="spinner-wrapper">
@@ -17,22 +16,19 @@
       <span class="visually-hidden">Cargando...</span>
     </div>
   </div>
-  
   <!-- Integración de Bootstrap -->
-  
-  
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand text-primary" href="index.html">
         <img src="logo/logo.png" alt="Logo" class="d-inline-block align-top">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-primary" aria-current="page" href="#inicio">Inicio</a>
+            <a class="nav-link active text-primary" aria-current="page" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-primary" href="#productos">Productos</a>
@@ -44,112 +40,110 @@
             <a class="nav-link text-primary" href="#nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-primary" href="#contactanos">Contáctanos</a>
+            <a class="nav-link text-primary" href="#footer">Contáctanos</a>
           </li>
         </ul>
-        <!-- Interruptor de modo claro y oscuro -->
+        <!-- switch de modo claro y oscuro -->
         <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" id="modoOscuroSwitch">
+          <input class="form-check-input" type="checkbox" id="modoOscuroSwitch" onclick="toggleDarkMode()">
           <label class="form-check-label text-white" for="modoOscuroSwitch">Modo Oscuro</label>
         </div>
       </div>
     </div>
   </nav>
-  <!-- Termina la barra de navegación -->
-  
-  <!-- Carrusel -->
-  <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="imgPrueba/FODA.png" class="d-block mx-auto" alt="..." style="width: 600px; height: 300px;">
-      </div>
-      <div class="carousel-item">
-        <img src="img/Lineas.png" class="d-block mx-auto" alt="..." style="width: 600px; height: 300px;">
-      </div>
-      <div class="carousel-item">
-        <img src="imgPrueba/ej1.png" class="d-block mx-auto" alt="..." style="width: 600px; height: 300px;">
-      </div>
-      <div class="carousel-item">
-        <img src="imgPrueba/ej2.png" class="d-block mx-auto" alt="..." style="width: 600px; height: 300px;">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  </nav>
+ 
   
   <div id="productos" class="container-fluid seccion seccion-productos">
     <h2 class="mb-4 titulo">Productos</h2>
     <div class="container productos-grid mt-4">
-      <!-- Aquí puedes colocar tus productos -->
-      <div class="producto">Producto 1</div>
-      <div class="producto">Producto 2</div>
-      <div class="producto">Producto 3</div>
-      <div class="producto">Producto 4</div>
-      <div class="producto">Producto 5</div>
-      <div class="producto">Producto 6</div>
-      <div class="producto">Producto 7</div>
-      <div class="producto">Producto 8</div>
+   
+      <div class="producto text-dark">Producto 1</div>
+      <div class="producto text-dark">Producto 2</div>
+      <div class="producto text-dark">Producto 3</div>
+      <div class="producto text-dark">Producto 4</div>
+      <div class="producto text-dark">Producto 5</div>
+      <div class="producto text-dark">Producto 6</div>
+      <div class="producto text-dark">Producto 7</div>
+      <div class="producto text-dark">Producto 8</div>
     </div>
   </div>
   
   <div id="servicios" class="container-fluid seccion seccion-servicios">
     <h2 class="mb-4 titulo">Servicios</h2>
     <div class="container servicios-grid mt-4">
-      <!-- Aquí puedes colocar tus servicios -->
-      <div class="servicio">Servicio 1</div>
-      <div class="servicio">Servicio 2</div>
-      <div class="servicio">Servicio 3</div>
-      <div class="servicio">Servicio 4</div>
-      <div class="servicio">Servicio 1</div>
-      <div class="servicio">Servicio 2</div>
-      <div class="servicio">Servicio 3</div>
-      <div class="servicio">Servicio 4</div>
+    
+      <div class="servicio text-dark">Servicio 1</div>
+      <div class="servicio text-dark">Servicio 2</div>
+      <div class="servicio text-dark">Servicio 3</div>
+      <div class="servicio text-dark">Servicio 4</div>
+      <div class="servicio text-dark">Servicio 1</div>
+      <div class="servicio text-dark">Servicio 2</div>
+      <div class="servicio text-dark">Servicio 3</div>
+      <div class="servicio text-dark">Servicio 4</div>
     </div>
   </div>
 
-  <!-- Contenido de la página -->
-  <div id="nosotros" class="container-fluid seccion">
-    <h2>Nosotros</h2>
-    <!-- Contenido de la sección "Nosotros" -->
+   <!-- Sección Sobre Nosotros -->
+   <div id="nosotros" class="container-fluid seccion">
+    <h2>Sobre Nosotros</h2>
+    <!-- Carrusel para Mision, Vision y Valores -->
+    <div id="mision-vision-valores" class="container-fluid carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="container-fluid seccion nueva-seccion">
+            <h2>Misión</h2>
+            <p>En Master Tic's Soluciones Informáticas nos comprometemos a proporcionar servicios integrales y soluciones tecnológicas innovadoras que satisfagan las necesidades de nuestros clientes en videovigilancia, cableado estructurado, equipo de cómputo, puntos de venta y desarrollo web.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="container-fluid seccion nueva-seccion">
+            <h2>Visión</h2>
+            <p>Nuestra visión en Master Tic's Soluciones Informáticas es convertirnos en líderes reconocidos a nivel nacional en el campo de las soluciones tecnológicas, siendo referentes en la excelencia del servicio y la innovación constante.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="container-fluid seccion nueva-seccion">
+            <h2>Valores</h2>
+            <p>Descripción de los valores de la empresa.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#mision-vision-valores" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#mision-vision-valores" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
   </div>
- <!-- Sección Misión -->
- <div id="mision" class="container-fluid nueva-seccion hidden">
-  <h2>Misión</h2>
-  <p>En Master Tic's Soluciones Informáticas nos comprometemos a proporcionar servicios integrales y soluciones tecnológicas innovadoras que satisfagan las necesidades de nuestros clientes
-     en videovigilancia, cableado estructurado, equipo de cómputo, puntos de venta y desarrollo web.</p>
-</div>
 
-<!-- Sección Visión -->
-<div id="vision" class="container-fluid nueva-seccion hidden">
-  <h2>Visión</h2>
-  <p>
-    Nuestra visión en Master Tic's Soluciones Informáticas es convertirnos en líderes reconocidos a nivel nacional en el campo de las soluciones tecnológicas, 
-    siendo referentes en la excelencia del servicio y la innovación constante.</p>
-</div>
-
-<!-- Sección Valores -->
-<div id="valores" class="container-fluid nueva-seccion hidden">
-  <h2>Valores</h2>
-  <p>Descripción de los valores de la empresa.</p>
-</div>
-  
+  <!-- Sección Contáctanos -->
   <div id="contactanos" class="container-fluid seccion">
-    <h2>Contáctanos</h2>
-    <!-- Contenido de la sección "Contáctanos" -->
+    <h2></h2>
   </div>
 
-  <!-- Pie de página -->
-  <footer class="bg-dark text-white text-center py-3">
-    <div class="container">
-      <p>&copy; 2024 MasterTic's. Todos los derechos reservados.</p>
+<!-- Pie de página -->
+<footer id="footer" class="footer text-center" style="padding: 10px 0;">
+  <div class="row">
+    <div class="col-lg-4 text-center text-lg-start">
+      <p style="font-size: 1.1em;">Contactanos</p>
     </div>
-  </footer>
+    <div class="col-lg-4 text-center">
+      <p style="font-size: 0.9em; margin-top: 10px;">&copy; 2024 MasterTic's. Todos los derechos reservados.</p>
+    </div>
+    <div class="col-lg-4 text-lg-end">
+      <div class="contact-info">
+        <p style="font-size: 0.9em; text-align: right; margin-bottom: 5px;">Correo: mastertics5@gmail.com</p>
+        <p style="font-size: 0.9em; text-align: right; margin-bottom: 0;">Teléfono: 465 1053 77 63</p>
+      </div>
+    </div>
+  </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
