--- a/index.html
+++ b/index.html
@@ -228,35 +228,46 @@
   </div>
 
   <!-- Sección Contáctanos -->
-  <div id="contactanos" class="container-fluid seccion">
 
-    <div id="contacto" class="container-fluid seccion">
-      <h2 class="mb-4 titulo">Contactanos</h2>
-      <form id="contactForm" action="#" method="POST">
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" name="nombre" required>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-2 col-md-1 col-sm-12"></div>
+      <div class="col-lg-8 col-md-10 col-sm-12 bg-primary my-5 text-center">
+        <div id="contactanos" class="container-fluid seccion">
+
+          <div id="contacto" class="container-fluid seccion">
+            <h2 class="mb-4 titulo">Contactanos</h2>
+            <form id="contactForm" action="#" method="POST">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" required>
+              </div>
+              <div class="mb-3">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefono" name="telefono" required>
+              </div>
+              <div class="mb-3">
+                <label for="direccion" class="form-label">Dirección</label>
+                <input type="text" class="form-control" id="direccion" name="direccion" required>
+              </div>
+              <div class="mb-3">
+                <label for="empresa" class="form-label">Empresa</label>
+                <input type="text" class="form-control" id="empresa" name="empresa" required>
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label">Detalles</label>
+                <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="telefono" class="form-label">Teléfono</label>
-          <input type="tel" class="form-control" id="telefono" name="telefono" required>
-        </div>
-        <div class="mb-3">
-          <label for="direccion" class="form-label">Dirección</label>
-          <input type="text" class="form-control" id="direccion" name="direccion" required>
-        </div>
-        <div class="mb-3">
-          <label for="empresa" class="form-label">Empresa</label>
-          <input type="text" class="form-control" id="empresa" name="empresa" required>
-        </div>
-        <div class="mb-3">
-          <label for="mensaje" class="form-label">Detalles</label>
-          <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
+
+      </div>
+      <div class="col-lg-2 col-md-1 col-sm-12"></div>
     </div>
   </div>
+  
 
 <!-- Pie de página -->
 <footer id="footer" class="footer text-center" style="padding: 10px 0;">
