--- a/index.html
+++ b/index.html
@@ -61,56 +61,56 @@
     <h2 class="mb-4 titulo">Productos</h2>
     <div class="container productos-grid mt-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 2</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 3</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 4</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 5</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 6</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 7</h5>
           <p class="card-text">Descripcion del producto</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/producto.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Producto 8</h5>
           <p class="card-text">Descripcion del producto</p>
@@ -124,56 +124,56 @@
     <h2 class="mb-4 titulo">Servicios</h2>
     <div class="container servicios-grid mt-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 1</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 2</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 3</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 4</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 5</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 6</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 7</h5>
           <p class="card-text">Descripcion del servicio</p>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="imgPrueba/servicio.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Servicio 8</h5>
           <p class="card-text">Descripcion del servicio</p>
@@ -190,7 +190,7 @@
         <p>En Master Tic's Soluciones Informáticas nos comprometemos a proporcionar servicios integrales y soluciones tecnológicas innovadoras que satisfagan las necesidades de nuestros clientes en videovigilancia, cableado estructurado, equipo de cómputo, puntos de venta y desarrollo web.</p>
       </div>
     </div>
-    <div class="carousel-item" style="background-image: url('img/vision.jpg');">
+    <div class="carousel-item" style="background-image: url('img/vision.png');">
       <div class="container-fluid seccion nueva-seccion">
         <h2>Visión</h2>
         <p>Nuestra visión en Master Tic's Soluciones Informáticas es convertirnos en líderes reconocidos a nivel nacional en el campo de las soluciones tecnológicas, siendo referentes en la excelencia del servicio y la innovación constante.</p>
@@ -201,16 +201,13 @@
         <h2>Valores</h2>
         <ul>
          <p> 
-          Innovación Tecnológica: Estamos comprometidos con la búsqueda continua de soluciones tecnológicas avanzadas que anticipen las necesidades del mercado. <br>
           Calidad y Excelencia: Nos esforzamos por ofrecer productos y servicios de la más alta calidad, garantizando la satisfacción total de nuestros clientes. <br>
           Integridad y Confianza: Operamos con transparencia y ética en todas nuestras relaciones comerciales y profesionales <br>
           Compromiso con el Cliente: Priorizamos las necesidades y expectativas de nuestros clientes, proporcionando soluciones personalizadas y un servicio excepcional. <br>
           Innovación Constante: Promovemos un ambiente de aprendizaje y mejora continua, fomentando la innovación en todos los aspectos de nuestro negocio. <br>
-          Responsabilidad Social y Ambiental: Actuamos de manera responsable con el medio ambiente y la comunidad, buscando siempre minimizar nuestro impacto y contribuir positivamente. <br>
-          Colaboración y Trabajo en Equipo: Valoramos la colaboración y el trabajo en equipo como fundamentos para alcanzar resultados excepcionales y fomentar un ambiente de confianza y respeto. <br>
           Adaptabilidad y Flexibilidad: Nos adaptamos rápidamente a los cambios del mercado y las tecnologías emergentes para mantenernos siempre relevantes y competitivos. <br>
           Crecimiento Sostenible: Buscamos un crecimiento equilibrado y sostenible, asegurando la viabilidad a largo plazo de nuestra empresa y contribuyendo al desarrollo de la industria tecnológica. <br>
-          Pasión por la Tecnología: Nuestro equipo está impulsado por una pasión compartida por la tecnología y la innovación, buscando siempre superar los límites y explorar nuevas oportunidades.</p>
+          </p>
           </div>
         </ul>
       </div>
@@ -229,7 +226,7 @@
 
   <!-- Sección Contáctanos -->
 
-  <div class="container">
+  <div class="container text-white" >
     <div class="row">
       <div class="col-lg-2 col-md-1 col-sm-12"></div>
       <div class="col-lg-8 col-md-10 col-sm-12 bg-primary my-5 text-center">
@@ -237,7 +234,7 @@
 
           <div id="contacto" class="container-fluid seccion">
             <h2 class="mb-4 titulo">Contactanos</h2>
-            <form id="contactForm" action="#" method="POST">
+            <form id="contactForm" action="mailto:puentestorresiancarlos@gmail.com" method="POST" enctype="text/plain">
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -258,7 +255,7 @@
                 <label for="mensaje" class="form-label">Detalles</label>
                 <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-success">Enviar</button>
             </form>
           </div>
         </div>
@@ -273,15 +270,15 @@
 <footer id="footer" class="footer text-center" style="padding: 10px 0;">
   <div class="row">
     <div class="col-lg-4 text-center text-lg-start">
-      <p style="font-size: 1.5em; margin-top: 10px; margin-left: 70px;">Pabellón de Arteaga, AGS</p>
+      <p style="font-size: 1.5em; margin-top: 31px; margin-left: 40px;">Pabellón de Arteaga, AGS</p>
     </div>
     <div class="col-lg-4 text-center">
-      <p style="font-size: 1.1em; margin-top: 10px;">&copy; 2024 MasterTic's. Todos los derechos reservados.</p>
+      <p style="font-size: 1.1em; margin-top: 30px;">&copy; 2024 MasterTic's. Todos los derechos reservados.</p>
     </div>
     <div class="col-lg-4 text-lg-end">
       <div class="contact-info">
-        <p style="font-size: 0.9em; text-align: right; margin-bottom: 5px; margin-right: 70px;">Correo: mastertics5@gmail.com</p>
-        <p style="font-size: 0.9em; text-align: right; margin-bottom: 0; margin-right: 70px;">Teléfono: 465 1053 77 63</p>
+        <p style="font-size: 0.9em;  margin-bottom: 5px; margin-right: 70px; margin-top: 30px;">Correo: mastertics5@gmail.com</p>
+        <p style="font-size: 0.9em;  margin-bottom: 0; margin-right: 70px; margin-top:25px ;">Teléfono: 465 1053 77 63</p>
       </div>
     </div>
   </div>
