--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <!-- Sección Contáctanos -->
 
-  <div class="container text-dark" >
+  <div class="container text-dark" id="fondo">
     <div class="row">
       <div class="col-lg-2 col-md-1 col-sm-12"></div>
       <div class="col-lg-8 col-md-10 bg-light col-sm-12 my-5 text-center" id="campo">
@@ -233,7 +233,7 @@
 
           <div id="contacto" class="container-fluid seccion">
             <h2 class="mb-4 titulo text-dark">Contactanos</h2>
-            <form id="contactForm" action="mailto:puentestorresiancarlos@gmail.com" method="POST" enctype="text/plain">
+            <form id="contactForm" action="mailto:mastertics5@gmail.com" method="POST" enctype="text/plain">
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -257,13 +257,21 @@
                 <label for="mensaje" class="form-label">Detalles</label>
                 <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn">Enviar</button>
             </form>
           </div>
         </div>
 
       </div>
       <div class="col-lg-2 col-md-1 col-sm-12"></div>
+    </div>
+  </div>
+  <div class="container-fluid seccion seccion-video">
+    <h2 class="mb-4 titulo text-light">Video</h2>
+    <div class="video-wrapper">
+      <video controls poster="">
+        <source src="" type="">
+      </video>
     </div>
   </div>
   
