--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
   <div class="container-fluid seccion seccion-video">
     <h2 class="mb-4 titulo text-light">Video</h2>
     <div class="video-wrapper">
-      <video controls poster="">
-        <source src="" type="">
+      <video controls poster="img/Poster.png">
+        <source src="Video/Anuncio MasterTics.mp4" type="video/mp4">
       </video>
     </div>
   </div>
